--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,18 @@ services:
     ports:
       - '13672:5432'
     restart: always
+    volumes:
+      - db-data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: sqlalchemy_examples_db
+      POSTGRES_DB: qaguru_db
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+
+volumes:
+  db-data:
