--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,27 @@
 version: '3.9'
 
 services:
+  app:
+    build: .
+    environment:
+      DATABASE_ENGINE: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/postgres
+
+    ports:
+      - 8002:80
+    depends_on:
+      - db
+  #    image: qa-guru-app
+
   db:
     image: postgres:latest
     ports:
-      - '13672:5432'
+      - '5432:5432'
     restart: always
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: qaguru_db
+      POSTGRES_USER:
+      POSTGRES_PASSWORD:
 
   adminer:
     image: adminer
