--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,12 +13,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          cache: 'pipenv'
-      - run: pip install --no-cache-dir pipenv
-      - run: pipenv install --deploy --ignore-pipfile
+          cache: 'pip'
+      - run: pip install --no-cache-dir --upgrade -r /code/requirements.txt
       - run: docker compose up -d --build
       - run: sleep 10  # Даем время на запуск контейнеров
-      - run: docker compose ps  # Проверяем статус контейнеров
+      - run: docker compose ps -a  # Проверяем статус контейнеров
       - run: pytest -v tests  # Запускаем тесты
       - run: docker compose logs app  # Выводим логи приложения
         if: always()
