--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,9 @@ jobs:
   tests:
     name: Test app
     runs-on: ubuntu-latest
+    env:
+      POSTGRES_USER: ci
+      POSTGRES_PASSWORD: ci
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -22,6 +25,8 @@ jobs:
       - run: docker compose logs app  # Выводим логи приложения
         if: always()
       - run: pytest tests
+        env:
+          APP_URL: APP_URL=http://127.0.0.1:8002/v1/api
 
       - run: docker compose logs app
         if: always()
