--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,11 +22,8 @@ jobs:
       - run: docker compose up -d --build
       - run: sleep 10  # Даем время на запуск контейнеров
       - run: docker compose ps -a  # Проверяем статус контейнеров
-      - run: pytest -v tests  # Запускаем тесты
+      - run: pytest -v tests --junit-xml=test-results.xml # Запускаем тесты
       - run: docker compose logs app  # Выводим логи приложения
-        if: always()
-      - run: pytest tests --junit-xml=test-results.xml
-      - run: docker compose logs app
         if: always()
 
       - name: Surface failing tests
